2011-10-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Add new crop routines.

	* mln/geom/crop.hh,
	* mln/geom/crop_without_localization.hh: New.

2011-10-14  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/value/builtin/floatings.hh: Fix string name for builtin
	double type.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Scribo build system.

	* demo/viewer/Makefile.am: Take into account no-strict-aliasing
	flag.

	* demo/review/Makefile.am,
	* src/toolchain/nepomuk/Makefile.am: Do not distribute some
	examples.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve text justification in HTML document reconstruction.

	* demo/xml2doc/templates/html/css.css,
	* demo/xml2doc/templates/html/main.xsl,
	* demo/xml2doc/templates/html/main_base64.xsl: Add new CSS rules.

2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Update Milena tests w.r.t. the new version of lena.pgm.

	* tests/linear/log.cc: Update references values.

2011-05-12  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/io/dicom/load.hh: Fix invalid data while loading large
	image.

2010-12-10  Roland Levillain  <roland@lrde.epita.fr>

	Ensure non implemented reconstructions on sets abort at run time.

	* mln/morpho/reconstruction/by_dilation/union_find.hh,
	* mln/morpho/reconstruction/by_erosion/union_find.hh
	(union_find_dispatch(image::kind::logic, Image, Image, Neighborhood)):
	Here.
	* tests/morpho/reconstruction/by_dilation/union_find.cc,
	* tests/morpho/reconstruction/by_erosion/union_find.cc:
	Rename as...
	* tests/morpho/reconstruction/by_dilation/union_find_on_functions.cc,
	* tests/morpho/reconstruction/by_erosion/union_find_on_functions.cc:
	...these.
	* tests/morpho/reconstruction/by_dilation/union_find_on_sets.cc,
	* tests/morpho/reconstruction/by_erosion/union_find_on_sets.cc:
	New tests.
	* tests/morpho/reconstruction/by_dilation/Makefile.am,
	* tests/morpho/reconstruction/by_erosion/Makefile.am:
	Adjust.
	(check_PROGRAMS): Add union_find_on_sets.